--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.categories {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+.categories::-webkit-scrollbar {
+  width: 6px;
+}
+.categories::-webkit-scrollbar-thumb {
+  background-color: rgb(243, 244, 246);
+  border-radius: 20px;
+}
+.categories::-webkit-scrollbar-track {
+  margin: 10px;
+  border-radius: 20px;
+  background-color: transparent;
+}
